# browser-use-mcp

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/: __init__.py  client.py  repl.py  server.py
src/browser/: __init__.py  cloud.py  guards.py  types.py
src/browser_use_mcp/: __init__.py  browser_use.py  main.py  server.py  smoke.py
src/tools/: __init__.py  billing.py  browsers.py  common.py  files.py  profiles.py  sessions.py  tasks.py
tests/: __init__.py  conftest.py  test_bootstrap_coverage.py  test_browser_use_helpers.py  test_browser_use_tools.py  test_connection_live.py  test_correlation_ids.py  test_server.py  test_wait_for_task.py
