[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[project]
name = "browser-use-mcp"
version = "0.0.1"
description = "Dedalus MCP server for Browser Use Cloud API v2."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Dedalus Labs" }]
maintainers = [{ name = "Dedalus Labs" }]
keywords = ["mcp", "dedalus", "browser-use", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "dedalus-mcp>=0.7.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
test = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
]
lint = [
    "ruff>=0.13.3",
]
dev = [
    { include-group = "test" },
    { include-group = "lint" },
]

[tool.uv]
preview = true
package = true
default-groups = ["test", "lint"]

[tool.uv.build-backend]
source-exclude = [
    "dist/**",
    "**/__pycache__/**",
    "**/build/**",
    "**/.pytest_cache/**",
]

[tool.ruff]
extend = "../pyproject.toml"
line-length = 120
target-version = "py310"

[tool.ruff.lint.isort]
known-first-party = ["browser_use_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    "--cov=browser_use_mcp",
    "--cov-report=term-missing",
    "--cov-report=xml",
]
